syntax = "proto3";

package test.proto;

import "google/api/annotations.proto";

option go_package = "test/proto";

service Msg {
    rpc Deposit(MsgDeposit) returns (MsgDepositResp){
        option (google.api.http) = {
            post: "/v1/test/deposit"
            body: "*"
        };
    }

    rpc Withdraw(MsgWithdraw) returns (MsgWithdrawResp){
        option (google.api.http) = {
            post: "/v1/test/withdraw"
            body: "*"
        };
    }

    rpc Send(MsgSend) returns (MsgSendResp){
        option (google.api.http) = {
        post: "/v1/test/send"
          body: "*"
        };
    }
}

message MsgDeposit{
    string userid = 1;
    string amt  = 3;
    string denom  = 4;
    string memo   = 5;
}
message MsgDepositResp {
}


message MsgWithdraw {
    string userid = 1;
    string amt  = 2;
    string denom  = 3;
    string memo   = 4;
} 

message MsgWithdrawResp {
}

message MsgSend{
    string from = 1;
    string to   = 2;
    string amt  = 3;
    string denom  = 4;
    string memo   = 5;
}
message MsgSendResp {
}


service Query {
    rpc Balance(QueryBalance) returns (QueryBalanceResp){
        option (google.api.http) = {
            get: "/v1/test/balance"
        };
    }

    rpc DepositHistory(QueryDepositHistory) returns (QueryDepositHistoryResp){
        option (google.api.http) = {
            get: "/v1/test/deposit-history"
        };
    }

    rpc SendHistory(QuerySendHistory) returns (QuerySendHistoryResp){
        option (google.api.http) = {
            get: "/v1/test/send-history"
        };
    }
}

message QueryBalance {
    string userid   = 1;
}
message BalanceItem {
    string amt    = 1;
    string denom  = 2;
}
message QueryBalanceResp {
    string userid = 1;
    repeated BalanceItem items = 2;
}

message QueryDepositHistory{
    string userid = 1;
}

message DepositHistoryItem {
    string type = 1;
    string from = 2;
    string to   = 3;
    string amt  = 4;
    string denom  = 5;
    string memo   = 6;
}
message QueryDepositHistoryResp {
    string from = 1;
    repeated  SendHistoryItem history = 2;
}


message QuerySendHistory{
    string userid = 1;
}

message SendHistoryItem {
    string type = 1;
    string from = 2;
    string to   = 3;
    string amt  = 4;
    string denom  = 5;
    string memo   = 6;
}
message QuerySendHistoryResp {
    string from = 1;
    repeated  SendHistoryItem history = 2;
}
